2004-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinMenu.c, unix/tkUnixMenu.c (DrawMenuEntryLabel): place
	images of compound menu entries in indicator space if not a radio
	of checkbutton. [Bug #756952] (eserte)

	* win/tkWinX.c:                fix drawing of unicode chars in menu
	* win/tkWinInt.h (TkWinProcs): titles. [Bug #904371] (riefenstahl)
	* win/tkWinMenu.c (ReconfigureWindowsMenu):

	* generic/tkClipboard.c:   Move TkClipCleanup from tkClipboard.c
	* mac/tkMacXStubs.c:       to being implemented in a platform
	* macosx/tkMacOSXXStubs.c: specific manner.  The cleanup order was
	* unix/tkUnixEvent.c:      bad at least on Windows, where we
	* win/tkWinX.c:            reset/cleared display info that was
	still needed for the clipboard to render.
	[Bug #939389, #822002, #732662]

	* library/panedwindow.tcl (MarkSash): call DragSash to stop sash
	jump when B1 is pressed and released without moving. [Bug #932155]
	Make the panedwindow -opaqueresize option work as per the docs.
	[Bug #778893]

	* tests/panedwindow.test: panedwindow-25.1
	* generic/tkPanedWindow.c (Unlink): clean up -before/-after refs
	to a slave when removing it. [Bug #928413] (griffin)

	* generic/tkImgPhoto.c (ImgPhotoConfigureMaster): force -data into
	ByteArray and -format into String to correctly handle them if they
	have been shimmered or created as some other object type.
	(ImgPhotoCmd): correctly init matched to 0.

2004-04-20  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c: Backported fix for bug #915350  
	"Tk sets min, max size in WM_HINTS when it shouldn't" 
	and #922336 "Tk apps have no maximize window button under 
	KDE-3.2.1"

2004-04-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/bgerror.tcl (bgerror): rework to only set -topmost bit
	on Windows if necessary.  Also use existing ::tk functions for
	placing dialog and managing focus/grab.

2004-03-31  Jim Ingham  <jingham@apple.com>
